# gomi-microservice

./: .env.example  .gitignore  flake.nix  main.py  pyproject.toml
app/: main.py  schemas.py
app/api/routes/: analyze.py
app/ml/: git_extractor.py  helpers.py  lizard_scanner.py  models.py
app/schemas/: analyze.py
app/services/: analyzer.py
