[project]
name = "gomi-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.1",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
    "numpy>=2.0.0",
    "joblib>=1.3.2",
    "shap>=0.44.0",
    "transformers>=5.8.1",
    "scikit-learn>=1.3.0",
    "lizard>=1.22.1",
    "torch>=2.12.0",
    "llvmlite>=0.43.0",
    "python-dotenv>=1.0.1",
]


